# file-finder

./: .gitignore  LICENSE  README.md  invoke.ps1  pyproject.toml  sonar-project.properties
.github/workflows/: release-msi.yml
docs/: README.md  index.html  styles.css
packaging/windows/: build-msi.ps1  file-finder.spec  file-finder.wxs
scripts/: get_msi_product_code.ps1
src/file_finder_cli/: __init__.py  __main__.py  cli.py  config.py  models.py  output.py  repository.py  service.py
src/file_finder_cli.egg-info/: SOURCES.txt
tests/: test_cli.py
