[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "file-finder"
version = "0.1.0"
description = "Read-only Microsoft 365 file finder for Midtown's toy chest"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [{name = "Thomas Bray", email = "thomas.bray@midtown.net"}]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0",
    "mtg-microsoft-auth @ git+https://github.com/Midtown-Technology-Group/mtg-microsoft-auth.git@main",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=23.0.0", "ruff>=0.1.0"]

[project.scripts]
file-finder = "file_finder_cli.cli:main"

[project.urls]
Homepage = "https://midtown-technology-group.github.io/file-finder/"
Documentation = "https://midtown-technology-group.github.io/file-finder/"
Repository = "https://github.com/Midtown-Technology-Group/file-finder"
Issues = "https://github.com/Midtown-Technology-Group/file-finder/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
